fix: contrast color, position main menu

--- a/components/Tag/Tag.module.css
+++ b/components/Tag/Tag.module.css
@@ -34,7 +34,7 @@
 
 .grey {
 	color: var(--white);
-	background: #51648C;
+	background: #8a99b7;
 
 	font-weight: bold;
 }
